--- a/features-by-version/java-8/java-functional-interfaces/pom.xml
+++ b/features-by-version/java-8/java-functional-interfaces/pom.xml
@@ -12,7 +12,7 @@
 </parent>
 
 <groupId>com.br.dev </groupId>
-<artifactId>functional-interfaces</artifactId>
+<artifactId>java-functional-interfaces</artifactId>
 <version>1.0.0</version>
 
 
