--- a/features-by-version/java-11/java-examples/pom.xml
+++ b/features-by-version/java-11/java-examples/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>com.br.dev </groupId>
-    <artifactId>example-module</artifactId>
+    <artifactId>java-examples</artifactId>
     <version>1.0.0</version>
     <dependencies>
         <dependency>
